--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ VITE_FIREBASE_STORAGE_BUCKET=clone-b2076.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=510631943790
 VITE_FIREBASE_APP_ID=1:510631943790:web:286258b04d11524efb507f
 
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=https://react-amazon-backend-project.onrender.com
