--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 
 # Backend API URL
-# For local development
-VITE_API_URL=http://localhost:5000
-# For production (update after deploying backend)
-# VITE_API_URL=https://your-backend-url.onrender.com
+# For local development:
+# VITE_API_URL=http://localhost:5000
+# For production:
+VITE_API_URL=https://react-amazon-backend-project.onrender.com
