Rebrand: Update project name from Amazon Clone to Ecommerce Website

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Naol724.github.io/React-Ecommerce-App",
-  "name": "amazon-clone",
+  "name": "ecommerce-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
